# ifood-case

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 0_data_exploratory.ipynb  1_data_processing.ipynb  2_modeling.ipynb
src/: hyperopt.py  model.py  plots.py  preprocess.py  utils.py
