[tool.poetry]
name = "ifood-case"
version = "1.0.0"
description = ""
authors = ["Raquel Câmara <raquelc.porto@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.0"
numpy = "^1.22.4"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
xgbse = "^0.2.3"
optuna = "^3.2.0"
seaborn = "^0.13.2"
shap = "^0.47.2"
xgboost = "^3.0.0"
pyspark = "^3.5.5"
lightgbm = "^4.6.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
